kustomization/components/controlplane/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nakka-controlplane
  labels:
    app.kubernetes.io/managed-by: nakka
